# terminal

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  README.rst  charming.py  deploy.sh  index.html  main.py  package.json  pnpm-lock.yaml  rollup.config.js  server.js  setup.cfg  setup.py  vite.config.js
.github/workflows/: test.yml
charming/: __init__.py  api.py  app.py  charming.py  cmath.py  color.py  common.py  constants.py  context.py  core.py  environment.py  event.py  globals.py  helpers.py  image.py  renderer.py  shape.py  sketch.py  structure.py  transform.py  typography.py  utils.py
docs/: API.md  README.rst  api-index.md  api-reference.md  api.md  color.md  curve.md  events.md  future-work.md  get-started.md  helpers.md  image.md  index.md  installation.md  introduction.md  math.md  overview.md  processing&p5js-to-charming.md  processing-to-charming.md  readme.md  shape.md  stucture.md  study-advice.md  transform.md  typography.md  what-is-cell.md  why-is-it.md
docs/.vitepress/: config.js
docs/api/: color.md  constants.md  environment.md  event.md  events.md  helpers.md  image.md  io.md  math.md  overview.md  readme.md  shape.md  structure.md  time.md  transform.md  (+1 more)
examples/: barchart.py  bfs.py  bubble.py  dfs.py  globe.py  heart.py  insertion.py  merge.py  pie.py  prim.py  scales.py  snake.py
lib/: brython.min.js  brython_stdlib.js
p3/: __init__.py
requirements/: base.txt  dev.txt
rust/: Cargo.toml
scripts/: docs.py  vite.js
src/: app.js  canvas.js  cell.js  constant.js  index.js  platform.js  render.js  terminal.js  wide.js
test/: app.spec.js  canvas.js  canvas.spec.js  common.js  index.html  index.js  platform.spec.js  snapshot.spec.js  terminal.spec.js  test.py  test2.py  utils.js
tests/: hello_test.py  test_background.py  test_color.py  test_color_lerp.py  test_color_mode.py  test_color_mode_ansi.py  test_color_mode_hsb.py  test_color_mode_rgb.py  test_color_palette.py  test_color_rgb.py  test_constants.py  test_context.py  test_environment.py  test_environment_double.py  test_environment_single.py  test_event.py  test_event_cursor.py  test_event_key.py  test_event_keyboard.py  test_event_mouse.py  test_exception.py  test_figlet_text.py  test_hello.py  test_helper.py  test_helper_check_params.py  test_helper_no_check.py  test_image.py  test_math_noise.py  test_math_random.py  test_mode.py  test_parameters_check.py  test_record.py  test_shape.py  test_shape_arc.py  test_shape_attributes.py  test_shape_bezier.py  test_shape_contour.py  test_shape_curve.py  test_shape_point.py  test_shape_primitive_type.py  (+17 more)
(+252 files in other folders)
