[metadata]
name = charming
url = https://github.com/charming-art/charming
projects_url = 
    Documentation = https://github.com/charming-art/charming/tree/master/docs/README.rst
    Code = https://github.com/charming-art/charming
    Issue tracker = https://github.com/charming-art/charming/issues
license = LGPL v2.1
author = Pearmini
author_email = pearminipro@gmail.com
maintainer = Pearmini
maintainer_email = pearminipro@gmail.com
description = A creative coding language based on Processing and Python for interactive character terminal art programing.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Console :: Curses
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Graphics
    Topic :: Terminals

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src